--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,8 @@
     "firebase/php-jwt": "5.2.1",
     "zircote/swagger-php": "^4.7",
     "swagger-api/swagger-ui": "^5.1"
+  },
+  "config": {
+    "platform-check": false
   }
 }
